[Math][Project] Math report

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -7,6 +7,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage[breaklinks=true,bookmarks=false]{hyperref}
+\usepackage{subcaption}
 
 \cvprfinalcopy
 
@@ -54,8 +55,25 @@ In 2013, Apple introduced the parallax effect on their line of iPhones, which al
      -Jenna
 \subsubsection{Virtual Window}
      -Jenna
-\subsubsection{Previous Project}
-    -Jai
+     
+\begin{figure}
+\begin{subfigure}{0.2\textwidth}
+\includegraphics[scale=0.16]{images/AR_now}
+\end{subfigure}
+\begin{subfigure}{0.2\textwidth}
+\includegraphics[scale=0.22]{images/AR_now1}
+\end{subfigure}
+\caption{AR in present smartphones}
+\label{pic:arnow}
+\end{figure}
+     
+\subsubsection{Digital Transparency}
+One more motivation for this project come from the augmented reality (AR) in present smartphones. The AR is smartphones can majorly be classified into two types
+\begin{itemize}
+\item \textbf{Indirect AR} Figure \ref{pic:arnow} shows augmented reality applications in current smartphones. This gives the user a video see-through experience, as the view is from the camera's perspective.
+\item \textbf{Direct AR} These are the systems that give a perspective from user's point of view and hence give more immersive experience than indirect AR system. Holo-lens and meta-glasses are examples of direct AR systems. 
+\end{itemize}
+
 \section{Method}
 \subsection{3D Geometry of Problem}
     -Jenna. describe the vectors involved
@@ -86,6 +104,7 @@ Yarow, Jay. "Here's Why Apple Made That Motion-Effect For The Background Of The 
 
 \bibitem{DigitalTrends}
 Pelegrin, Williams. "Why Isn’t the Fire Phone Truly 3D? Amazon’s ‘Dynamic Perspective’ Tech Explained." \textit{Digital Trends}. Digital Trends, 18 June 2014. Web. 11 Dec. 2015.
+\end{thebibliography}
 
 \end{document}
 
